Keep workshop README locales and diagrams verifiable (#266)
The README set needs English and Korean documents to carry the same scope, while generated sequence assets must keep labels readable under the bluetape4k diagram rules.

Constraint: README.md must remain English and README.ko.md must preserve equivalent Korean content without summary-only placeholders.
Rejected: Keeping Korean README summaries that point to English details | it loses localized content parity.
Rejected: Relying on Mermaid sequence rendering | label placement was not readable and not covered by diagram asset checks.
Confidence: high
Scope-risk: broad
Directive: Run README language/parity checks and sequence label-clearance checks before future README batches.
Tested: node scripts/validate-readme-language.mjs; node scripts/validate-readme-parity.mjs; README image link check; sequence SVG label clearance/font/non-Korean checks; xmllint on sequence SVGs; git diff --check.
Not-tested: Full Gradle build; this is a documentation and generated diagram asset change.